--- a/RxAuto/Data/RxAuto.Data.Models/RxAuto.Data.Models.csproj
+++ b/RxAuto/Data/RxAuto.Data.Models/RxAuto.Data.Models.csproj
@@ -1,7 +1,15 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netstandard2.1</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\RxAuto.Data.Common\RxAuto.Data.Common.csproj" />
+  </ItemGroup>
 
 </Project>
