--- a/RxAuto/Data/RxAuto.Data.Models/RxAuto.Data.Models.csproj
+++ b/RxAuto/Data/RxAuto.Data.Models/RxAuto.Data.Models.csproj
@@ -1,7 +1,7 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.1</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
@@ -9,7 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\RxAuto.Data.Common\RxAuto.Data.Common.csproj" />
+    <ProjectReference Include="..\RxAuto.Data.Common\RxAuto.Data.Common.csproj" />
   </ItemGroup>
 
 </Project>
