Add identity step for some id's, Add InitialCreate migration

--- a/RxAuto/Data/RxAuto.Data/RxAuto.Data.csproj
+++ b/RxAuto/Data/RxAuto.Data/RxAuto.Data.csproj
@@ -17,4 +17,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\RxAuto.Data.Models\RxAuto.Data.Models.csproj" />
+  </ItemGroup>
+
 </Project>
