--- a/RxAuto/Data/RxAuto.Data/appsettings.json
+++ b/RxAuto/Data/RxAuto.Data/appsettings.json
@@ -1,5 +1,5 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=RxAuto;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=DESKTOP-6UES80A\\SQLEXPRESS;Database=RxAuto;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
