--- a/RxAuto/Web/RxAuto.Web/appsettings.json
+++ b/RxAuto/Web/RxAuto.Web/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=RxAuto;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=DESKTOP-6UES80A\\SQLEXPRESS;Database=RxAuto;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
