Clean static files, relocate in LibMan

--- a/RxAuto/Web/RxAuto.Web/RxAuto.Web.csproj
+++ b/RxAuto/Web/RxAuto.Web/RxAuto.Web.csproj
@@ -20,4 +20,9 @@
     <ProjectReference Include="..\..\Data\RxAuto.Data\RxAuto.Data.csproj" />
   </ItemGroup>
 
+
+  <ItemGroup>
+    <Folder Include="wwwroot\lib\bootstrap\" />
+  </ItemGroup>
+
 </Project>
