Replace LINQ with UserManager

--- a/RxAuto/Web/RxAuto.Web/RxAuto.Web.csproj
+++ b/RxAuto/Web/RxAuto.Web/RxAuto.Web.csproj
@@ -22,7 +22,12 @@
 
 
   <ItemGroup>
+    <Folder Include="Areas\Administration\Controllers\" />
+    <Folder Include="Areas\Administration\Models\" />
     <Folder Include="wwwroot\lib\bootstrap\" />
+    <Folder Include="wwwroot\lib\jquery\" />
+    <Folder Include="wwwroot\lib\jquery-validation\" />
+    <Folder Include="wwwroot\lib\jquery-validation-unobtrusive\" />
   </ItemGroup>
 
 </Project>
