--- a/RxAuto/Web/RxAuto.Web/RxAuto.Web.csproj
+++ b/RxAuto/Web/RxAuto.Web/RxAuto.Web.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -15,18 +15,17 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.1" />
   </ItemGroup>
 
-
-  <ItemGroup>
-    <ProjectReference Include="..\..\Data\RxAuto.Data\RxAuto.Data.csproj" />
-  </ItemGroup>
-
-
   <ItemGroup>
     <Folder Include="Areas\Administration\Models\" />
     <Folder Include="wwwroot\lib\bootstrap\" />
     <Folder Include="wwwroot\lib\jquery\" />
     <Folder Include="wwwroot\lib\jquery-validation\" />
     <Folder Include="wwwroot\lib\jquery-validation-unobtrusive\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\Services\RxAuto.Services.Data\RxAuto.Services.Data.csproj" />
+    <ProjectReference Include="..\RxAuto.Web.ViewModels\RxAuto.Web.ViewModels.csproj" />
   </ItemGroup>
 
 </Project>
